--- a/jquery-jcflick.css
+++ b/jquery-jcflick.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
 /**
-* MediaQuery MultiDevice Template ver 0.1É¿
+* MediaQuery MultiDevice Template ver 0.1
 * @Author: funnythingz
-* @Url:    http://hiropo.co.uk
+* @Url:    http://tpl.funnythingz.com
+* @Update  2012/05/31
 * 
 * jquery-jcflick.css
 */
@@ -94,6 +95,9 @@
 #flickMain .pointer { cursor: pointer !important; }
 #flickMain .btnFalse { background: transparent !important; }
 
+.flickCol a.noHighlight{
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 @media only screen and (max-width: 580px)
 {
